# market_research

./: README.md  assignment.md  pyproject.toml
market_research/output/: CGI.com_report.md
market_research/src/market_research/: crew.py
output/: IBM.com_report.md
src/market_research/: crew.py  main.py
src/market_research/config/: agents.yaml  tasks.yaml
